--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,14 +120,13 @@
 				</div>
 			<% } %>
 
-			<div style="background-color: #2d2d2d; color: white; padding: 20px 0px 20px 0px;" class="row">
+			<div style="font-family: avenirl; background-color: #2d2d2d; color: white; padding: 20px 0px 20px 0px;" class="row">
 				<div class="<% if (typeof user !== 'undefined') { %>col-xs-12<% } else { %>col-md-8<% } %>">
 					<div class="row">
-						<div class="col-md-3 visible-md visible-xl visible-lg"><img class="hm-logo" src="../images/hm-logo.jpg" /></div> <!-- LOGO -->
-						<div class="col-md-9 greenborder">
+						<div style="top: 145px;" class="col-md-3 visible-md visible-xl visible-lg"><img style="width: 240px;" class="hm-logo" src="../images/hm-logo.jpg" /></div> <!-- LOGO -->
+						<div class="col-md-8 greenborder">
 							<div class="visible-xs visible-sm" style="margin: auto;width: 100px"><img class="hm-logo" src="../images/hm-logo.jpg" /></div>
-							<p>BIENVENUE DANS LA BULLE HELLO MARCEL, LE COACH AUDIO EN PARENTALITE<br /><br />Parce que quand on est parents, on a plein de questions et peu de temps pour y répondre, nous avons imaginé La Bulle Hello Marcel : des programmes audio courts qui s’adressent à tous les parents et traiteront de thèmes variés (autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…).<br /><br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
-							<br />
+							<p><h1 style="font-size: 18px;"><b style="font-family: brandon;">BIENVENUE DANS LA BULLE HELLO MARCEL, LE COACH AUDIO EN PARENTALITE</b></h1><br />Parce que quand on est parents, on a plein de questions et peu de temps pour y répondre, nous avons imaginé La Bulle Hello Marcel : des programmes audio courts qui s’adressent à tous les parents et traiteront de thèmes variés (autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…).<br /><br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
 							<div class="text-center row">
 								<span class="presentation" onclick="songClicked(`presentation.mp3`);"><i class="fa fa-play-circle" style="color: #51E99D; font-size: 40px;" aria-hidden="true"></i><span style="position: relative; bottom: 10px; left: 5px;">Intro à La Bulle</span>&nbsp;</span>
 							</div>
@@ -167,10 +166,10 @@
 				<% categories.forEach((categorie, index) => { %>
 					<div class="<%= index % 2 == 0 ? 'col-md-offset-1' : '' %> col-md-5 col-xs-12" style="padding-bottom: 30px;">
 						<div class="category">
-							<div class="row"><div class="col-xs-12"><h3><%= categorie.name %></h3></div></div> <!-- TITRE -->
+							<div class="row"><div class="col-xs-12"><h3 style="font-family: brandon; "><%= categorie.name %></h3></div></div> <!-- TITRE -->
 							<div class="categoryDesc row">
 								<div class="col-xs-4"><img class="list-img" src="../images/<%= categorie.image %>" /></div>
-								<div class="col-xs-8"><p><%= categorie.description %></p></div>
+								<div class="col-xs-8" style="font-family: avenirl;"><p><%= categorie.description %></p></div>
 							</div> <!-- IMAGE / DESCRIPTION -->
 							<br />
 							<% categorie.songs.forEach((song) => { %>
