--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,11 +120,11 @@
 				</div>
 			<% } %>
 
-			<div style="font-family: avenirl; background-color: #2d2d2d; color: white; padding: 20px 0px 0px 0px;" class="row">
+			<div style="font-family: avenirl; background-color: #2d2d2d; color: white; padding: 20px 0px 20px 0px;" class="row">
 				<div class="<% if (typeof user !== 'undefined') { %>col-xs-12<% } else { %>col-md-8<% } %>">
 					<div class="row">
-						<div class="col-md-3 visible-md visible-xl visible-lg"><img class="hm-logo" src="../images/hm-logo.jpg" /></div> <!-- LOGO -->
-						<div style="margin-left: -10px;" class="col-md-9 greenborder">
+						<div style="position: absolute; height: 100%; width: 20%;" class="visible-md visible-xl visible-lg"><img style="position: absolute; bottom: -20px;" class="hm-logo" src="../images/hm-logo.jpg" /></div> <!-- LOGO -->
+						<div class="col-md-9 greenborder firstBulle">
 							<div class="visible-xs visible-sm" style="margin: auto;width: 100px"><img class="hm-logo" src="../images/hm-logo.jpg" /></div>
 							<div class="white"><p><h1 style="font-size: 18px;"><b style="font-family: brandon;">BIENVENUE DANS LA BULLE HELLO MARCEL, LE COACH AUDIO EN PARENTALITE</b></h1><br />Parce que quand on est parents, on a plein de questions et peu de temps pour y répondre, nous avons imaginé La Bulle Hello Marcel : des programmes audio courts qui s’adressent à tous les parents et traiteront de thèmes variés (autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…).<br /><br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p></div>
 							<div class="text-center row">
@@ -228,7 +228,6 @@
 				vol = parseFloat($.cookie('volume'));
 			}
 			let categoryHeight = 0;
-			$('.hm-logo').css('margin-top', $('.getHeight').height() - 135);
 			jQuery(document).ready(function ($) {
 				let song = (user ? (user.lastRead ? user.lastRead : null) : null);
 				if (song)
