--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
 	  						<input type="submit" value="Inscription" name="button" /><br />
 						</form>
 					</div>
-					<div class="modal-footer"><p class="text-center">Pour pouvoir écouter les programmes audio de La Bulle, merci de vous connecter ou vous inscrire ci-dessous</p></div>
+					<div class="modal-footer"><p class="text-center">Pour pouvoir écouter les programmes audio de La Bulle, merci de vous connecter ou vous inscrire ci-dessus</p></div>
 				</div>
 			</div>
 		</div>
