--- a/views/index.ejs
+++ b/views/index.ejs
@@ -168,8 +168,7 @@
 						<div class="category">
 							<div class="row"><div class="col-xs-12"><h3 style="font-family: brandon; "><%= categorie.name %></h3></div></div> <!-- TITRE -->
 							<div class="categoryDesc row">
-								<div class="col-xs-4"><img class="list-img" src="../images/<%= categorie.image %>" /></div>
-								<div class="col-xs-8" style="font-family: avenirl;"><p><%= categorie.description %></p></div>
+								<div class="col-xs-12" style="font-family: avenirl;"><img style="margin: -3px 10px 0px 0px;float: left; max-width: 150px;" class="list-img" src="../images/<%= categorie.image %>" /><p><%= categorie.description %></p></div>
 							</div> <!-- IMAGE / DESCRIPTION -->
 							<br />
 							<% categorie.songs.forEach((song) => { %>
@@ -178,8 +177,8 @@
 									<% var liked = user.likes.findIndex((elem) => { return elem.name == song.fileName.replace(/\s/g,'').split('.')[0] }); %>
 								<% } %>
 								<div class="row">
-									<div onclick="songClicked(`<%= song.fileName %>`);" class="song col-xs-offset-1 col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
-									<div onclick="songClicked(`<%= song.fileName %>`);" class="song <%= typeof user !== 'undefined' ? 'col-xs-7' : 'col-xs-9' %>"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
+									<div onclick="songClicked(`<%= song.fileName %>`);" class="song col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
+									<div onclick="songClicked(`<%= song.fileName %>`);" class="song <%= typeof user !== 'undefined' ? 'col-xs-9' : 'col-xs-11' %>"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
 										<div class="whiteloadingbar"><% if (typeof timeRead !== 'undefined') { %><div class="greenloadingbar" id="loadingbar<%= timeRead %>" style="width: <%= (timeRead.time / timeRead.duration) * 100 %>%;"></div><% } %></div></p>
 									</div>
 									<% if (typeof user !== 'undefined') { %>
@@ -286,7 +285,7 @@
 						songMp3 = categories.find((el) => { return el.name == categoryName }).songs[i].name;
 					}
 				});
-				$("#playerContainer").html(`<div style="width: 100%;"><audio id='player' style="width: 100%;" src='../audios/${songName}' preload='auto' type='audio/mpeg' height='40'></audio></div>`);
+				$("#playerContainer").html(`<div style="width: 100%;"><audio id='player' style="width: 100%;" src='../audios/${songName}' preload='auto' type='audio/mpeg' height='50'></audio></div>`);
 				$('#player').mediaelementplayer({
 					success: function (mediaElement) {
 						mediaElement.addEventListener('loadedmetadata', function(){
@@ -295,15 +294,16 @@
 								$('.mejs__controls').append(`<div onclick="favorite('${user.likes.findIndex((elem) => { return elem.name == songName }) > -1 ? songName : songName}');" class="${songName.replace(/\s/g,'').split('.')[0]} mejs__button ${user.likes.findIndex((elem) => { return elem.name == songName.replace(/\s/g,'').split('.')[0]; }) > -1 ? 'mejs_liked' : 'mejs_like'}"><i class="fa fa-heart fa-heart-spe" aria-hidden="true"></i></div>`);
 								songCurrentTime = user.timeRead.find((elem) => { return elem.name == songName });
 							}
-							$('.mejs__controls').prepend(`<div class="hidden-xs" style="width: 30px; background-color: black; height: 100%; z-index: 9000;"></div><div class="hidden-xs titleSong mejs__button">${categoryName} ${categoryName.length >= 1 ? '-' : ''} ${songMp3}</div>`);
-							$('.mejs__controls').prepend(`<div style="padding-top: 8px; z-index: 9000; background-color: black;" class="mejs__button"><img width="34" src="${image}"/></div>`);
+							$('.mejs__container').prepend(`<div style="position: absolute; width: 30%; z-index: 7000;height: 20px; background-color: black; left: 0;"></div><div class="titleSong mejs__button"><span class="textSong">${categoryName} ${categoryName.length >= 1 ? '-' : ''} ${songMp3}</span></div><div style="position: absolute; width: 30%; z-index: 7000;height: 20px; background-color: black; top: 0;right: 0;"></div>`);
+							$('.mejs__controls').prepend(`<div style="padding-top: 8px; padding-right: 5px;" class="mejs__button"><img width="34" src="${image}"/></div>`);
 							if (songCurrentTime) mediaElement.setCurrentTime(songCurrentTime.time >= mediaElement.duration ? 0 : songCurrentTime.time);
 							else mediaElement.setCurrentTime(0);
 							if (autoPlay) {
 								mediaElement.play();
+
 								function repeat() {
-									$(".titleSong").css({"left":'-60px'}).show();
-									$(".titleSong").animate({left:'+=240px'},5000);
+									$(".titleSong").css({"left":$(window).width() - ($('.textSong').width() * 1.5)}).show();
+									$(".titleSong").animate({left: 0},10000);
 									$('.titleSong').delay(0).fadeOut(0,repeat);
 								}
 								repeat();
