--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,6 @@
 					</div>
 					<div class="modal-body text-center" style="padding-top: 40px;">
 						<a onclick="toggleForm();" href="#" class="formSwapLink">Créer mon compte</a>
-						&nbsp;
 						<a onclick="toggleForm();" href="#" class="formSwapLink activeLink">Me connecter</a>
 						<br />
 						<br />
@@ -194,7 +193,7 @@
 			</div> <!-- LISTES -->
 			<div style="background-color: #666666; color: white; padding: 20px 0 50px 0;" class="row">
 				<div class="col-xs-offset-2 col-xs-8">
-					<div class="greenborder row">
+					<div style="padding: 10px 2px 10px 2px;" class="greenborder row">
 						<div class="col-xs-12">
 							<p>Pour faire progresser la Bulle, nous avons besoins de vos retours sur ces premiers épisodes, merci de nous accorder 5 min pour remplir ce rapide questionnaire !
 								<br />A très vite ;)<br/><span style="float: right;">L’équipe Hello Marcel</span>
