--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,8 +21,8 @@
 						<h4 class="modal-title">Se connecter / S'inscrire :</h4>
 					</div>
 					<div class="modal-body text-center" style="padding-top: 40px;">
-						<a onclick="toggleForm();" href="#" class="formSwapLink">Créer mon compte</a>
-						<a onclick="toggleForm();" href="#" class="formSwapLink activeLink">Me connecter</a>
+						<a onclick="toggleForm();" href="#" class="formSwapLink activeLink">Créer mon compte</a>
+						<a onclick="toggleForm();" href="#" class="formSwapLink">Me connecter</a>
 						<br />
 						<br />
 						<form class="formSwapForm" action="/auth" method="post">
@@ -136,8 +136,8 @@
 					<div style="margin-top: 25px;" class="text-center col-md-4">
 						<div class="row">
 							<div class="col-xs-12">
-								<a onclick="toggleForm();" href="#" class="formSwapLink">Créer mon compte</a>
-								<a onclick="toggleForm();" href="#" class="formSwapLink activeLink">Me connecter</a>
+								<a onclick="toggleForm();" href="#" class="formSwapLink activeLink">Créer mon compte</a>
+								<a onclick="toggleForm();" href="#" class="formSwapLink">Me connecter</a>
 							</div>
 							<br />
 							<br />
