--- a/views/index.ejs
+++ b/views/index.ejs
@@ -177,7 +177,7 @@
 								<% } %>
 								<div class="row">
 									<div onclick="songClicked(`<%= song.fileName %>`);" class="song col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
-									<div onclick="songClicked(`<%= song.fileName %>`);" class="song <%= typeof user !== 'undefined' ? 'col-xs-9' : 'col-xs-11' %>"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
+									<div onclick="songClicked(`<%= song.fileName %>`);" class="song <%= typeof user !== 'undefined' ? 'col-xs-9' : 'col-xs-11' %>"><p style="font-size: 14px;"><%= song.name %> - <%- toMinutes(song.duration) %>
 										<div class="whiteloadingbar"><% if (typeof timeRead !== 'undefined') { %><div class="greenloadingbar" id="loadingbar<%= timeRead %>" style="width: <%= (timeRead.time / timeRead.duration) * 100 %>%;"></div><% } %></div></p>
 									</div>
 									<% if (typeof user !== 'undefined') { %>
