--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,7 +127,7 @@
 							<div class="visible-xs visible-sm" style="margin: auto;width: 100px"><img class="hm-logo" src="../images/hm-logo.jpg" /></div>
 							<div class="white"><p><h1 style="font-size: 18px;"><b style="font-family: brandon;">BIENVENUE DANS LA BULLE HELLO MARCEL, LE COACH AUDIO EN PARENTALITE</b></h1><br />Parce que quand on est parents, on a plein de questions et peu de temps pour y répondre, nous avons imaginé La Bulle Hello Marcel : des programmes audio courts qui s’adressent à tous les parents et traiteront de thèmes variés (autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…).<br /><br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p></div>
 							<div class="text-center row">
-								<span class="presentation" onclick="songClicked(`presentation.mp3`);"><i class="fa fa-play-circle" style="color: #51E99D; font-size: 40px;" aria-hidden="true"></i><span style="position: relative; bottom: 10px; left: 5px;">Intro à La Bulle</span>&nbsp;</span>
+								<span class="presentations" onclick="songClicked(`presentation.mp3`);"><i class="fa fa-play-circle" style="color: #51E99D; font-size: 40px;" aria-hidden="true"></i><span style="position: relative; bottom: 10px; left: 5px;">Intro à La Bulle</span>&nbsp;</span>
 							</div>
 						</div> <!-- TEXT / AUDIO -->
 					</div>
