--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,7 @@ h3 {
 	color: #51E99D;
 }
 
-.song, .presentation {
+.song, .presentations {
 	cursor: pointer;
 }
 
@@ -160,7 +160,7 @@ h3 {
 	background-color: #4DDD99;
 }
 
-.presentation {
+.presentations {
 	display: inline-block;
 	background-color: #666666;
 	border-radius: 50px;
@@ -212,6 +212,7 @@ h3 {
 	z-index: 50;
 	padding-top: 8px;
 	width: 100%;
+	height: 20px;
 	position: relative;
 	color: white;
 	text-align: left;
