--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,6 +9,8 @@
 			<div class="col-xs-6 user-interface">
 				<a href="/">Retour au site</a>
 				&nbsp;&nbsp;&nbsp;
+				<a href="/backoffice">Dashboard</a>
+				&nbsp;&nbsp;&nbsp;
 				<a href="/songs">Les podcasts</a>
 				&nbsp;&nbsp;&nbsp;
 				<a href="/users">Users</a>
