--- a/views/categorys.ejs
+++ b/views/categorys.ejs
@@ -11,7 +11,7 @@
 	  <title>Backoffice</title>
   </head>
 	<body>
-		<div class="container-fluid">
+		<div class="container-fluid text-center">
 			<%- include header.ejs %>
 			<br />
 			<table class="table no-border hover">
