--- a/views/formCategory.ejs
+++ b/views/formCategory.ejs
@@ -11,7 +11,7 @@
 	  <title>Backoffice</title>
   </head>
 	<body>
-		<div class="container">
+		<div class="container-fluid text-center">
 			<%- include header.ejs %>
 			<div class="row" style="font-size: 15px;">
 				<form id="uploadForm" ref='uploadForm' action="<%= typeof category._id !== 'undefined' ? '/edit/category/' + category._id : '/create/category' %>" encType="multipart/form-data" method="post">
