--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <meta name="viewport" content="width=device-width" />
-	  <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"/>
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.8/build/mediaelementplayer.min.css">
-	  <link rel="stylesheet" href="/css/style.css">
-	  <meta name="description" content="La Bulle, le nouveau programme audio d’Hello Marcel qui permet aux parents en quelques minutes par jour de se poser et réfléchir sur des questions de parentalité du quotidien." />
-	  <meta name="keywords" content="hello marcel, concentration, autonomie, la bulle, parentalité, audio, podcast, famille, enfant, conseil, programme, media, coach" />
-	  <title>La Bulle</title>
+	  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-101924436-3"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-101924436-3');
+		</script>
+	<meta name="viewport" content="width=device-width" />
+	<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.8/build/mediaelementplayer.min.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<meta name="description" content="La Bulle, le nouveau programme audio d’Hello Marcel qui permet aux parents en quelques minutes par jour de se poser et réfléchir sur des questions de parentalité du quotidien." />
+	<meta name="keywords" content="hello marcel, concentration, autonomie, la bulle, parentalité, audio, podcast, famille, enfant, conseil, programme, media, coach" />
+	<title>La Bulle</title>
   </head>
 	<body>
 		<% if (typeof user == 'undefined') { %>
@@ -328,7 +336,7 @@
 			};
 
 			const favorite = (songName) => {
-				$.post('/favorite/song', { songName: songName.replace(/\s/g,'').split('.')[0] }, (datas) => {
+				$.post('/favorite/song', { songName: songName }, (datas) => {
 					if (datas.error) {
 						console.log(datas);
 					} else {
