--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,8 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h4 class="modal-title">Se connecter / S'inscrire :</h4>
+						<h4 class="modal-title">Se connecter / S'inscrire :</h4><br />
+						<p class="text-center">Pour pouvoir écouter les programmes audio de La Bulle, merci de vous connecter ou vous inscrire ci-dessus</p>
 					</div>
 					<div class="modal-body text-center" style="padding-top: 40px;">
 						<a onclick="toggleForm();" href="#" class="formSwapLink activeLink">Créer mon compte</a>
@@ -46,7 +47,6 @@
 							<a data-toggle="modal" data-dismiss="modal" data-target="#modalPassword" href="#">J'ai oublié mon mot de passe.</a>
 						</form>
 					</div>
-					<div class="modal-footer"><p class="text-center">Pour pouvoir écouter les programmes audio de La Bulle, merci de vous connecter ou vous inscrire ci-dessus</p></div>
 				</div>
 			</div>
 		</div>
