--- a/views/index.ejs
+++ b/views/index.ejs
@@ -190,7 +190,7 @@
 									</div>
 									<% if (typeof user !== 'undefined') { %>
 										<div class="col-xs-1 song"><i onclick="favorite(`<%= song.fileName %>`)" class="fa fa-heart heartsong <%- song.fileName.replace(/\s/g,'').split('.')[0]; %> <%= liked > -1 ? 'mejs_liked' : 'mejs_like' %>" aria-hidden="true"></i></div>
-										<div class="col-xs-1 text-center song"><a target="_blank" title="Version texte" href="../pdfs/<%= song.pdfName %>"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div>
+										<div onclick="sendPdfRead(`<%= song._id %>`)" class="col-xs-1 text-center pdf"><a target="_blank" title="Version texte" href="../pdfs/<%= song.pdfName %>"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div>
 									<% } %>
 								</div>
 								<br />
@@ -217,7 +217,7 @@
 				<div class="col-xs-12 text-center"><a href="#">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="/pdfs/cgu.pdf">CGU</a></div>
 			</div>
 			<div class="row">
-				<div id="playerContainer" class="col-xs-12"></div> <!-- AUDIO PLAYER -->
+				<div id="playerContainer" style="width: 100%; padding: 0;" class="col-xs-12"></div> <!-- AUDIO PLAYER -->
 			</div> <!-- FOOTER AUDIO -->
 
 		</div>
@@ -383,6 +383,12 @@
 			$('a[href="#"]').click((ev) => {
 				ev.preventDefault();
 			});
+
+			const sendPdfRead = (songId) => {
+				$.post('/pdfread/song', { id: songId }, (datas) => {
+					console.log(datas);
+				});
+			};
 
 			const getMaxHeight = (name) => {
 				let height = 0;
