--- a/views/users.ejs
+++ b/views/users.ejs
@@ -63,6 +63,7 @@
 												<tr>
 												    <th>Address mail</th>
 													<th>Nb podcasts vue</th>
+													<th>Date de création de compte</th>
 												</tr>
 											</thead>
 											<tbody>
@@ -94,6 +95,7 @@
 					"columns": [
 						{ "data": "mail" },
 						{ "data": "count" },
+						{ "data": "created_at" },
 					],
 					"iDisplayLength": 50,
 					"processing": true,
@@ -121,6 +123,7 @@
 						"columns": [
 							{ "data": "mail" },
 							{ "data": "count" },
+							{ "data": "created_at" },
 						],
 						"iDisplayLength": 50,
 						"processing": true,
