--- a/views/users.ejs
+++ b/views/users.ejs
@@ -149,7 +149,7 @@
 							});
 
 
-							$('#modalUser .modal-body').append(`<br /><table class="text-center"><thead><tr><th>Fidelité</th></tr></thead><tbody><tr><td>${toPercentage(fidelity / datas.listeneds.length)}</td></tr></tbody></table>`);
+							$('#modalUser .modal-body').append(`<br /><table class="text-center"><thead><tr><th>Moyenne</th></tr></thead><tbody><tr><td>${toPercentage(fidelity / datas.listeneds.length)}</td></tr></tbody></table>`);
 
 
 							let stats = new Array();
