--- a/views/index.ejs
+++ b/views/index.ejs
@@ -254,8 +254,11 @@
 			const sendTimeToServer = () => {
 				$('.' + time.name.replace(/\s/g,'').split('.')[0] + 'gb').css('width', (time.time / time.duration) * 100 + '%');
 				let index = user.timeRead.findIndex((el) => { return el.name == time.name });
-				if (index > -1)
+				if (index > -1) {
 					user.timeRead[index] = time;
+				} else {
+					user.timeRead.push(time);
+				}
 				$.post('/updateTime', time, (data) => {
 				});
 			};
