--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,9 +130,9 @@
 			<div style="font-family: avenirl; background-color: #2d2d2d; color: white; padding: 20px 0px 20px 0px;" class="row">
 				<div class="<% if (typeof user !== 'undefined') { %>col-xs-12<% } else { %>col-md-8<% } %>">
 					<div class="row">
-						<div style="position: absolute; height: 100%; width: 20%;" class="visible-md visible-xl visible-lg"><img style="position: absolute; bottom: -20px;" class="hm-logo" src="../images/hm-logo.jpg" /></div> <!-- LOGO -->
+						<div style="position: absolute; height: 100%; width: 20%;" class="visible-md visible-xl visible-lg"><img style="position: absolute; bottom: -20px;" class="hm-logo" src="../images/hm-logo.png" /></div> <!-- LOGO -->
 						<div class="col-md-9 greenborder firstBulle">
-							<div class="visible-xs visible-sm" style="margin: auto;width: 100px"><img class="hm-logo" src="../images/hm-logo.jpg" /></div>
+							<div class="visible-xs visible-sm" style="margin: auto;width: 100px"><img class="hm-logo" src="../images/hm-logo.png" /></div>
 							<div class="white"><p><h1 style="font-size: 18px;">Parce que quand on est parents, on a plein de questions et peu de temps pour y répondre, nous avons imaginé La Bulle Hello Marcel : des programmes audio courts qui s’adressent à tous les parents et traiteront de thèmes variés (autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…). Et pour commencer, nous avons traité deux thèmes incontournables : la concentration et l'autonomie.<br />En quelques minutes, chaque écoute vous apportera un décryptage et des clés essentielles pour faire votre propre chemin avec vos enfants, sur le thème choisi.<br /><br />Bonne écoute !</p></div>
 							<div style="margin-top: -25px;" class="text-center row">
 								<span class="presentations" onclick="songClicked(`presentation.mp3`);"><i class="fa fa-play-circle" style="padding-top: 5px; color: #51E99D; font-size: 40px;" aria-hidden="true"></i><span style="position: relative; bottom: 10px; left: 5px;">Intro à La Bulle</span>&nbsp;</span>
@@ -287,7 +287,7 @@
 			}
 
 			const makeSong = (songName, autoPlay) => {
-				let image = "../images/hm-logo.jpg";
+				let image = "../images/hm-logo.png";
 				let categoryName = "";
 				let songMp3 = "présentation";
 				categories.forEach((categorie) => {
