--- a/views/index.ejs
+++ b/views/index.ejs
@@ -214,7 +214,7 @@
 				</div>
 			</div>
 			<div class="row" style="padding-bottom: 50px;">
-				<div class="col-xs-12 text-center"><a href="#">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="/pdfs/cgu.pdf">CGU</a></div>
+				<div class="col-xs-12 text-center"><a href="mailto:contact@hellomarcel.fr">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="/pdfs/cgu.pdf">CGU</a></div>
 			</div>
 			<div class="row">
 				<div id="playerContainer" style="width: 100%; padding: 0;" class="col-xs-12"></div> <!-- AUDIO PLAYER -->
