--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,16 @@
 	<title>La Bulle</title>
   </head>
 	<body>
+		<div style="z-index: 90000000000;" class="modal fade" id="modalQuestionnaire" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<p class="text-center">Le questionnaire sera mis en ligne sous peu.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<% if (typeof user == 'undefined') { %>
 		<div style="z-index: 90000000000;" class="modal fade" id="modalAuth" role="dialog">
 			<div class="modal-dialog">
@@ -134,6 +144,7 @@
 						<div class="col-md-9 greenborder firstBulle">
 							<div class="visible-xs visible-sm" style="margin: auto;width: 100px"><img class="hm-logo" src="../images/hm-logo.png" /></div>
 							<div class="white"><p><h1 style="font-size: 18px;">Parce que quand on est parents, on a plein de questions et peu de temps pour y répondre, nous avons imaginé La Bulle Hello Marcel : des programmes audio courts qui s’adressent à tous les parents et traiteront de thèmes variés (autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…). Et pour commencer, nous avons traité deux thèmes incontournables : la concentration et l'autonomie.<br />En quelques minutes, chaque écoute vous apportera un décryptage et des clés essentielles pour faire votre propre chemin avec vos enfants, sur le thème choisi.<br /><br />Bonne écoute !</p></div>
+							<br class="visible-xs"/>
 							<div style="margin-top: -25px;" class="text-center row">
 								<span class="presentations" onclick="songClicked(`presentation.mp3`);"><i class="fa fa-play-circle" style="padding-top: 5px; color: #51E99D; font-size: 40px;" aria-hidden="true"></i><span style="position: relative; bottom: 10px; left: 5px;">Intro à La Bulle</span>&nbsp;</span>
 							</div>
@@ -208,7 +219,8 @@
 								<br />A très vite ;)<br/><span style="float: right;">L’équipe Hello Marcel</span>
 							</p>
 							<br />
-							<a target="_blank" class="button avis" href="https://www.google.fr/intl/fr/forms/about/">JE DONNE MON AVIS !</a>
+							<!--<a target="_blank" class="button avis" href="https://www.google.fr/intl/fr/forms/about/">JE DONNE MON AVIS !</a>-->
+							<a data-toggle="modal" class="button avis" data-target="#modalQuestionnaire" href="#">JE DONNE MON AVIS</a>
 						</div>
 					</div>
 				</div>
