--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -54,7 +54,7 @@
 								<tr>
 									<td><%= elem._id %></td>
 									<td><%= elem.count %></td>
-									<td><%= (elem.percentage / elem.count) %>%</td>
+									<td><%= elem.percentage %>%</td>
 								</tr>
 							<% }); %>
 						</tbody>
