--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<p class="text-center">Le questionnaire sera mis en ligne sous peu.</p>
+						<p class="text-center">Patience, le questionnaire sera bientôt en ligne ! 😉</p>
 					</div>
 				</div>
 			</div>
