--- a/views/users.ejs
+++ b/views/users.ejs
@@ -17,7 +17,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 						<div style="z-index: 90000000000;" class="modal fade" id="modalUser" role="dialog">
-							<div class="modal-dialog">
+							<div style="width: 80%;" class="modal-dialog">
 								<div class="modal-content">
 									<div class="modal-header">
 										<button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -147,10 +147,12 @@
 								fidelity += +elem.readed;
 								$('#modalUser .modal-body table tbody').append(`<tr><td>${elem.name}</td><td>${toPercentage(elem.readed)}</td><td>${moment(elem.timestamp).format('MM/DD/YYYY - hh:mm')}</td></tr>`);
 							});
-
-
 							$('#modalUser .modal-body').append(`<br /><table class="text-center"><thead><tr><th>Moyenne</th></tr></thead><tbody><tr><td>${toPercentage(fidelity / datas.listeneds.length)}</td></tr></tbody></table>`);
 
+							$('#modalUser .modal-body').append(`<br /><table class="likes text-center"><thead><tr><th>Aimé</th></tr></thead><tbody></tbody></table>`);
+							datas.user.likes.forEach((elem) => {
+								$('#modalUser .modal-body table.likes tbody').append(`<tr><td>${elem.name}</td></tr>`);
+							});
 
 							let stats = new Array();
 							let tot = 0;
